2008-08-17  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/passwd.c: For compatibility with other passwd version,
	the --lock an --unlock options do not lock or unlock the user
	account anymore.  They only lock or unlock the user's password.
	* man/passwd.1.xml: Document above change. Document how an account
	can be locked and what a password lock means.

2008-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupadd.8.xml: Fix the regular expression for group policy.
	The final $ character is optional.
	* man/groupadd.8.xml: Likewise.
	* man/groupadd.8.xml: Indicate the maximum size of usernames.

2008-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/pl.po: Fix typo in the Polish translation (see
	http://bugs.debian.org/491460)

2008-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* man/pl/Makefile.am: Do not build the Polish translation of
	login.1 and su.1 (not enough translated). See
	http://bugs.debian.org/491460

2008-08-13  Nicolas François  <nicolas.francois@centraliens.net>

	* man/shadow.5.xml: Fix typo. The password must be changed before
	the maximum number of days, not after.

2008-08-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Harmonize the unlock failure messages.

2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Added fail_exit().
	* src/pwck.c: Report failure to unlock files to stderr and
	syslog.
	* src/pwck.c: Report failure to sort to stderr, and exit with
	E_CANTSORT.
	* man/pwck.8.xml: Document return code 6 (E_CANTSORT).

2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Report failures to remove files to stderr.
	* src/vipw.c: Report failures to unlock files to stderr.

2008-08-07  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c: Added syslog support.
	* src/groupmems.c: members() renamed display_members() to