@@ -222,8 +222,8 @@ static void open_files (void)
 {
 	if (gr_lock () == 0) {
 		fprintf (stderr,
-		         _("%s: cannot lock %s\n"), Prog, gr_dbname ());
-		SYSLOG ((LOG_WARN, "cannot lock %s",gr_dbname ()));
+		         _("%s: cannot lock %s; try again later.\n"),
+		         Prog, gr_dbname ());
 		fail_exit (E_GRP_UPDATE);
 	}
 	group_locked = true;
@@ -237,9 +237,8 @@ static void open_files (void)
 	if (is_shadow_grp) {
 		if (sgr_lock () == 0)) {
 			fprintf (stderr,
-			         _("%s: cannot lock %s\n"),
+			         _("%s: cannot lock %s; try again later.\n"),
 			         Prog, sgr_dbname ());
-			SYSLOG ((LOG_WARN, "cannot lock %s", sgr_dbname ()));
 			fail_exit (E_GRP_UPDATE);
 		}
 		gshadow_locked = true;
