@@ -83,7 +83,9 @@ int main (int argc, char **argv)
 	(void) textdomain (PACKAGE);
 
 	if (gr_lock () == 0) {
-		fprintf (stderr, _("%s: cannot lock %s\n"), Prog, gr_dbname ());
+		fprintf (stderr,
+		         _("%s: cannot lock %s; try again later.\n"),
+		         Prog, gr_dbname ());
 		fail_exit (5);
 	}
 	group_locked = true;
@@ -93,7 +95,9 @@ int main (int argc, char **argv)
 	}
 
 	if (sgr_lock () == 0) {
-		fprintf (stderr, _("%s: cannot lock %s\n"), Prog, sgr_dbname ());
+		fprintf (stderr,
+		         _("%s: cannot lock %s; try again later.\n"),
+		         Prog, sgr_dbname ());
 		fail_exit (5);
 	}
 	gshadow_locked = true;
